--- a/src/assets/css/critical.css
+++ b/src/assets/css/critical.css
@@ -1,232 +1,316 @@
-/* STYLES FOR ABOVE THE FOLD */
 /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-  #hero {
-    font-family: "Barlow Condensed";
+@media only screen and (min-width: 0rem) {
+  #hero-227 {
     /* Centers button */
     text-align: center;
     /* changes on tablet */
     padding: 0 1rem;
-    padding-bottom: 1.25rem;
     position: relative;
     z-index: 1;
     /* prevents overflow from the lines extending past the screen width */
     overflow: hidden;
   }
-  #hero picture {
+  #hero-227 .cs-picture {
+    /* Background Image */
     width: 100%;
     height: 100%;
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
     z-index: -2;
   }
-  #hero img {
+  #hero-227 .cs-picture:before {
+    /* Black Color Overlay */
+    content: "";
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background: #000;
+    opacity: 0.6;
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    /* prevents the cursor from interacting with it */
+    pointer-events: none;
+  }
+  #hero-227 .cs-picture img {
     position: absolute;
     top: 0;
     left: 0;
-  }
-  #hero .custom-shape-divider-bottom-1714279077 {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    height: 100%;
     width: 100%;
-    overflow: hidden;
-    line-height: 0;
+    /* Makes image act like a background-image */
+    object-fit: cover;
   }
-  #hero .custom-shape-divider-bottom-1714279077 svg {
-    position: relative;
-    display: block;
-    width: calc(100% + 1.3px);
-    height: 150px;
-  }
-  #hero .custom-shape-divider-bottom-1714279077 .shape-fill {
-    fill: #F6F5F2;
-  }
-  #hero .cs-container {
+  #hero-227 .cs-container {
     width: 100%;
-    max-width: 80em;
+    max-width: 80rem;
+    /* we put the padding top and bottom on the container instead of #Hero so the pseudo element lines go to the top and bottom of the section */
+    /* 144px - 300px - leaving extra space for the navigation */
+    /* changes on tablet */
+    padding: clamp(9rem, 25.95vw, 18.75rem) 0 0;
+    /* 60px - 200px */
+    padding-bottom: clamp(3.75rem, 12.5vw, 25rem);
     margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: start;
-    row-gap: 2.5rem;
-    padding: clamp(7em, 23.95vw, 15.5em) 0 clamp(11em, 27.95vw, 19.5em) 0;
     position: relative;
   }
-  #hero .cs-flex-group {
-    width: 90vw;
-    /* 464px - 562px */
-    max-width: clamp(29em, 60vw, 35.125em);
-    margin: auto;
+  #hero-227 .cs-flex-group {
     /* 60px - 220px */
-    margin-bottom: clamp(3.75em, 15.5vw, 13.75em);
-    box-sizing: border-box;
+    margin-bottom: clamp(3.75rem, 15.5vw, 13.75rem);
+    /* changes on tablet */
+    margin-left: 1rem;
+    width: 80vw;
+    /* 464px - 562px */
+    max-width: clamp(29rem, 60vw, 35.125rem);
     display: flex;
-    justify-content: flex-start;
     align-items: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
+    box-sizing: border-box;
   }
-  #hero .cs-topper {
-    text-align: center;
+  #hero-227 .cs-topper {
+    /* 13px - 16px */
+    font-size: clamp(0.8125rem, 1.6vw, 1rem);
+    line-height: 1.2em;
+    text-transform: uppercase;
+    text-align: left;
+    letter-spacing: 0.1rem;
+    font-weight: 700;
+    color: var(--primaryLight);
     margin-bottom: 1rem;
-    color: var(--primary);
+    display: block;
   }
-  #hero .cs-title {
-    text-align: center;
+  #hero-227 .cs-title {
+    /* 39px - 61px */
+    font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
+    font-weight: 900;
+    line-height: 1.2em;
+    text-align: left;
     width: 100%;
-    color: white;
-    line-height: clamp(0.875em, 3.5vw, 1.5em);
-    font-size: 2.25rem;
+    /* 32px - 40px */
+    margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
+    color: var(--bodyTextColorWhite);
+    position: relative;
   }
-  #hero .cs-text {
-    text-align: center;
+  #hero-227 .cs-text {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 1.95vw, 1.25rem);
+    line-height: 1.5em;
+    text-align: left;
+    width: 100%;
     /* 32px - 40px */
     margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
     /* 40px - 48px */
     margin-bottom: clamp(2.5rem, 4vw, 3rem);
-    color: white;
-    font-size: 1.25rem;
+    color: var(--bodyTextColorWhite);
   }
-  #hero .cs-left {
-    font-size: min(1.2vw, 1em);
-    flex: none;
-    width: 90%;
-    text-align: center;
-  }
-  #hero .cs-right {
-    text-align: center;
-    height: 27vh;
-  }
-  #hero .cs-right img {
-    height: 100%;
-    width: auto;
-    border-radius: 7px;
-    box-shadow: 4px 4px 10px #d8d8d8;
-  }
-  #hero .cs-button-solid {
-    line-height: clamp(2.875em, 5.5vw, 3.5em);
-    height: initial;
-    margin-bottom: 1rem;
-  }
-  #hero .cs-button-transparent {
+  #hero-227 .cs-button-solid {
     font-size: 1rem;
-    font-weight: 700;
     /* 46px - 56px */
-    line-height: clamp(2.875em, 5.5vw, 3.5em);
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    width: 11.25rem;
     text-decoration: none;
+    font-weight: 400;
+    margin: 0 1.25rem 1rem 0;
+    color: #fff;
+    padding: 0;
+    background-color: var(--primary);
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+  }
+  #hero-227 .cs-button-solid:before {
+    content: "";
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 0%;
+    background: #000;
+    opacity: 1;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: width 0.3s;
+  }
+  #hero-227 .cs-button-transparent {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
     width: 11.25rem;
     /* 46px - 56px */
-    height: clamp(2.875em, 5.5vw, 3.5em);
-    margin: 0 0.5rem;
-    box-sizing: border-box;
-    padding: 0;
+    height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 700;
+    margin: 0;
     color: #fff;
+    padding: 0;
     background-color: transparent;
     border: 1px solid var(--bodyTextColorWhite);
+    box-sizing: border-box;
     display: inline-flex;
     justify-content: center;
     align-items: center;
     position: relative;
     z-index: 1;
   }
-  #hero .cs-button-transparent:before {
+  #hero-227 .cs-button-transparent:before {
     content: "";
+    position: absolute;
+    display: block;
     background: #000;
     opacity: 1;
-    display: block;
-    position: absolute;
     /* so it sits on top of the border */
     top: -1px;
+    left: -1px;
     right: -1px;
     bottom: -1px;
-    left: -1px;
     z-index: -1;
+    transform-origin: left;
     /* this is what creates the grow affect on hover */
     transform: scaleX(0);
     transition: transform 0.3s;
-    transform-origin: left;
   }
-  #hero .cs-button-transparent:hover:before {
+  #hero-227 .cs-button-transparent:hover:before {
     transform: scaleX(1);
   }
-  #hero .cs-button-transparent img {
-    margin-right: 0.75rem;
+  #hero-227 .cs-button-transparent .cs-img {
     display: block;
-    margin-top: 100px;
+    margin-right: 0.75rem;
+  }
+  #hero-227 .cs-card-group {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+  }
+  #hero-227 .cs-item {
+    list-style: none;
+    position: relative;
+    box-sizing: border-box;
+  }
+  #hero-227 .cs-link {
+    text-align: left;
+    text-decoration: none;
+    /* changes on tablet */
+    padding: 1.75rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+  }
+  #hero-227 .cs-link:hover:before {
+    opacity: 0.4;
+  }
+  #hero-227 .cs-link:before {
+    /* Hover Box */
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: var(--primary);
+    opacity: 0;
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: opacity 0.3s;
+  }
+  #hero-227 .cs-number {
+    /* 20px - 25px */
+    font-size: clamp(1.25rem, 2vw, 1.5625rem);
+    line-height: 1.2em;
+    font-weight: 900;
+    /* 24px - 32px */
+    margin-bottom: clamp(1.5rem, 4vw, 2rem);
+    color: var(--primaryLight);
+    display: block;
+  }
+  #hero-227 .cs-h2 {
+    /* 16px - 20px */
+    font-size: clamp(1rem, 2vw, 1.25rem);
+    font-weight: 900;
+    line-height: 1.2em;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 1rem;
+    color: var(--bodyTextColorWhite);
+    position: relative;
+    z-index: 10000;
+  }
+  #hero-227 .cs-item-text {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 3vw, 1rem);
+    margin: 0;
+    padding: 0;
+    max-width: 31.25rem;
+    color: var(--bodyTextColorWhite);
   }
 }
 /* Tablet - 768px */
-@media only screen and (min-width: 48em) {
-  #hero {
+@media only screen and (min-width: 48rem) {
+  #hero-227 {
     /* 32px - 40px */
-    padding: 0 clamp(2em, 5vw, 2.5em);
+    padding: 0 clamp(2rem, 5vw, 2.5rem);
   }
-  #hero #waves-bg {
-    /* Background Image */
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    overflow: hidden;
-    line-height: 0;
-    display: block;
+  #hero-227 .cs-container {
+    padding-bottom: 4rem;
   }
-  #hero #waves-bg img {
-    width: 100%;
-    height: 100%;
-    /* Makes image act like a background-image */
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
+  #hero-227 .cs-flex-group {
+    /* 44px - 88px */
+    margin-left: clamp(2.75rem, 5.9vw, 5.5rem);
   }
-  #hero .cs-title {
-    width: 100%;
-    color: var(--primary);
-    line-height: clamp(0.875em, 3.5vw, 1.5em);
-    font-size: 3.75rem;
-  }
-  #hero .cs-button-solid {
-    margin-right: 1.25rem;
+  #hero-227 .cs-button-solid {
     margin-bottom: 0;
-    padding: 0rem 3rem;
   }
-  #hero .cs-container {
-    flex-flow: row;
-    gap: 3.75rem;
+  #hero-227 .cs-card-group {
+    flex-direction: row;
+    position: relative;
   }
-  #hero .cs-left {
-    width: 43%;
+  #hero-227 .cs-item:before {
+    width: 1px;
+    height: 100vh;
+    background: -moz-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(250, 251, 252, 0) 0%, rgba(250, 251, 252, 0.5) 100%); /* Chrome10-25,Safari5.1-6 */
+    top: auto;
+    left: auto;
+    right: 0;
+    bottom: -4rem;
   }
-  #hero .cs-right {
-    margin: 0;
-    height: 37vh;
-    width: auto;
+  #hero-227 .cs-item:nth-of-type(1) {
+    /* makes the first line under the buttons shorter */
+  }
+  #hero-227 .cs-item:nth-of-type(1):before {
+    height: 39.375rem;
+  }
+  #hero-227 .cs-item:last-of-type:before, #hero-227 .cs-item:last-of-type:after {
+    display: none;
+  }
+  #hero-227 .cs-link {
+    /* 44px - 64px top & bottom, 48px - 88px left & right */
+    padding: clamp(2.75rem, 5.9vw, 5.5rem) clamp(3rem, 5.9vw, 5.5rem);
   }
 }
 /* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25em) {
-  #hero {
-    background-position: center;
+@media only screen and (min-width: 81.25rem) {
+  #hero-227 {
+    background: url("/assets/images/pexels-blitzboy-1144176.jpg");
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     /* creates parallax effect on background image */
     background-attachment: fixed;
+    /* remove img tag so we can make parallax work */
   }
-}
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-  body.dark-mode #hero .cs-background:before {
-    opacity: 0.8;
+  #hero-227 .cs-picture img {
+    display: none;
   }
 }
 /*-- -------------------------- -->
