--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -1,155 +1,168 @@
-/* STYLES FOR ABOVE THE FOLD */
-
 /*-- -------------------------- -->
 <---           Hero             -->
 <--- -------------------------- -*/
 
 /* Mobile - 360px */
-@media only screen and (min-width: 0em) {
-    #hero {
-        font-family: "Barlow Condensed";
+@media only screen and (min-width: 0rem) {
+    #hero-227 {
         /* Centers button */
         text-align: center;
         /* changes on tablet */
         padding: 0 calc(16 / 16 * 1rem);
-        padding-bottom: calc(20 / 16 * 1rem);
         position: relative;
         z-index: 1;
         /* prevents overflow from the lines extending past the screen width */
         overflow: hidden;
 
-        picture {
+        .cs-picture {
+            /* Background Image */
             width: 100%;
             height: 100%;
+            display: block;
             position: absolute;
             top: 0;
             left: 0;
             z-index: -2;
-        }
 
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
+            &:before {
+                /* Black Color Overlay */
+                content: "";
+                width: 100%;
+                height: 100%;
+                background: #000;
+                opacity: 0.6;
+                position: absolute;
+                display: block;
+                top: 0;
+                left: 0;
+                z-index: 1;
+                /* prevents the cursor from interacting with it */
+                pointer-events: none;
+            }
 
-        .custom-shape-divider-bottom-1714279077 {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            overflow: hidden;
-            line-height: 0;
-        }
-        
-        .custom-shape-divider-bottom-1714279077 svg {
-            position: relative;
-            display: block;
-            width: calc(100% + 1.3px);
-            height: 150px;
-        }
-        
-        .custom-shape-divider-bottom-1714279077 .shape-fill {
-            fill: #F6F5F2;
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                height: 100%;
+                width: 100%;
+                /* Makes image act like a background-image */
+                object-fit: cover;
+            }
         }
 
         .cs-container {
             width: 100%;
-            max-width: calc(1280 / 16 * 1em);
+            max-width: calc(1280 / 16 * 1rem);
+            /* we put the padding top and bottom on the container instead of #Hero so the pseudo element lines go to the top and bottom of the section */
+            /* 144px - 300px - leaving extra space for the navigation */
+            /* changes on tablet */
+            padding: clamp(9rem, 25.95vw, 18.75rem) 0 0;
+            /* 60px - 200px */
+            padding-bottom: clamp(3.75rem, 12.5vw, 25rem);
             margin: auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            text-align: start;
-            row-gap: calc(40 / 16 * 1rem);
-            padding: clamp(7em, 23.95vw, 15.5em) 0 clamp(11em, 27.95vw, 19.5em) 0; 
             position: relative;
         }
 
         .cs-flex-group {
-            width: 90vw;
-            /* 464px - 562px */
-            max-width: clamp(29em, 60vw, 35.125em);
-            margin: auto;
             /* 60px - 220px */
-            margin-bottom: clamp(3.75em, 15.5vw, 13.75em);
-            box-sizing: border-box;
+            margin-bottom: clamp(3.75rem, 15.5vw, 13.75rem);
+            /* changes on tablet */
+            margin-left: calc(16 / 16 * 1rem);
+            width: 80vw;
+            /* 464px - 562px */
+            max-width: clamp(29rem, 60vw, 35.125rem);
             display: flex;
-            justify-content: flex-start;
             align-items: flex-start;
+            justify-content: flex-start;
             flex-wrap: wrap;
+            box-sizing: border-box;
         }
 
         .cs-topper {
-            text-align: center;
+            /* 13px - 16px */
+            font-size: clamp(0.8125rem, 1.6vw, 1rem);
+            line-height: 1.2em;
+            text-transform: uppercase;
+            text-align: left;
+            letter-spacing: 0.1rem;
+            font-weight: 700;
+            color: var(--primaryLight);
             margin-bottom: calc(16 / 16 * 1rem);
-            color: var(--primary);
+            display: block;
         }
 
         .cs-title {
-            text-align: center;
+            /* 39px - 61px */
+            font-size: clamp(2.4375rem, 6.4vw, 3.8125rem);
+            font-weight: 900;
+            line-height: 1.2em;
+            text-align: left;
             width: 100%;
-            color: white;
-            line-height: clamp(0.875em, 3.5vw, 1.5em);
-            font-size: calc(16 / 16 * 2.25rem);
+            /* 32px - 40px */
+            margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
+            color: var(--bodyTextColorWhite);
+            position: relative;
         }
 
         .cs-text {
-            text-align: center;
+            /* 16px - 20px */
+            font-size: clamp(1rem, 1.95vw, 1.25rem);
+            line-height: 1.5em;
+            text-align: left;
+            width: 100%;
             /* 32px - 40px */
             margin: 0 auto clamp(2rem, 4vw, 2.5rem) 0;
             /* 40px - 48px */
             margin-bottom: clamp(2.5rem, 4vw, 3rem);
-            color: white;
-            font-size: 1.25rem;
-        }
-
-        .cs-left {
-            font-size: min(1.2vw, 1em);
-            flex: none;
-            width: 90%;
-            text-align: center;
-        }
-
-        .cs-right {
-            // border-radius: 46% 54% 70% 30% / 30% 49% 51% 70%;
-            // overflow: hidden;
-            text-align: center;
-            height: clamp(20vh, 27vh, 30vh);
-        }
-
-        .cs-right img {
-            height: 100%;
-            width: auto;
-            border-radius: 7px;
-            box-shadow: 4px 4px 10px #d8d8d8;
+            color: var(--bodyTextColorWhite);
         }
 
         .cs-button-solid {
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
-            height: initial;
-            margin-bottom: calc(16 / 16 * 1rem);
+            font-size: calc(16 / 16 * 1rem);
+            /* 46px - 56px */
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+            width: calc(180 / 16 * 1rem);
+            text-decoration: none;
+            font-weight: 400;
+            margin: 0 calc(20 / 16 * 1rem) calc(16 / 16 * 1rem) 0;
+            color: #fff;
+            padding: 0;
+            background-color: var(--primary);
+            display: inline-block;
+            position: relative;
+            z-index: 1;
+
+            &:before {
+                content: "";
+                position: absolute;
+                display: block;
+                height: 100%;
+                width: 0%;
+                background: #000;
+                opacity: 1;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: width 0.3s;
+            }
         }
 
         .cs-button-transparent {
             font-size: calc(16 / 16 * 1rem);
-            font-weight: 700;
             /* 46px - 56px */
-            line-height: clamp(2.875em, 5.5vw, 3.5em);
-            text-decoration: none;
+            line-height: clamp(2.875rem, 5.5vw, 3.5rem);
             width: calc(180 / 16 * 1rem);
             /* 46px - 56px */
-            height: clamp(2.875em, 5.5vw, 3.5em);
-            margin: 0 calc(8 / 16 * 1rem);
-            box-sizing: border-box;
-            padding: 0;
+            height: clamp(2.875rem, 5.5vw, 3.5rem);
+            text-decoration: none;
+            font-weight: 700;
+            margin: 0;
             color: #fff;
+            padding: 0;
             background-color: transparent;
             border: 1px solid var(--bodyTextColorWhite);
+            box-sizing: border-box;
             display: inline-flex;
             justify-content: center;
             align-items: center;
@@ -158,20 +171,20 @@
 
             &:before {
                 content: "";
+                position: absolute;
+                display: block;
                 background: #000;
                 opacity: 1;
-                display: block;
-                position: absolute;
                 /* so it sits on top of the border */
                 top: -1px;
+                left: -1px;
                 right: -1px;
                 bottom: -1px;
-                left: -1px;
                 z-index: -1;
+                transform-origin: left;
                 /* this is what creates the grow affect on hover */
                 transform: scaleX(0);
                 transition: transform 0.3s;
-                transform-origin: left;
             }
 
             &:hover {
@@ -180,92 +193,178 @@
                 }
             }
 
-            img {
-                margin-right: calc(12 / 16 * 1rem);
+            .cs-img {
                 display: block;
-                margin-top: 100px;
+                margin-right: calc(12 / 16 * 1rem);
             }
+        }
+
+        .cs-card-group {
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+        }
+
+        .cs-item {
+            list-style: none;
+            position: relative;
+            box-sizing: border-box;
+
+            
+        }
+
+        .cs-link {
+            text-align: left;
+            text-decoration: none;
+            /* changes on tablet */
+            padding: calc(28 / 16 * 1rem) calc(16 / 16 * 1rem);
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            position: relative;
+
+            &:hover {
+                &:before {
+                    opacity: 0.4;
+                }
+            }
+
+            &:before {
+                /* Hover Box */
+                content: "";
+                width: 100%;
+                height: 100%;
+                background: var(--primary);
+                opacity: 0;
+                position: absolute;
+                display: block;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                transition: opacity 0.3s;
+            }
+        }
+
+        .cs-number {
+            /* 20px - 25px */
+            font-size: clamp(1.25rem, 2vw, 1.5625rem);
+            line-height: 1.2em;
+            font-weight: 900;
+            /* 24px - 32px */
+            margin-bottom: clamp(1.5rem, 4vw, 2rem);
+            color: var(--primaryLight);
+            display: block;
+        }
+
+        .cs-h2 {
+            /* 16px - 20px */
+            font-size: clamp(1rem, 2vw, 1.25rem);
+            font-weight: 900;
+            line-height: 1.2em;
+            padding: 0;
+            margin: 0;
+            margin-bottom: calc(16 / 16 * 1rem);
+            color: var(--bodyTextColorWhite);
+            position: relative;
+            z-index: 10000;
+        }
+
+        .cs-item-text {
+            /* 14px - 16px */
+            font-size: clamp(0.875rem, 3vw, 1rem);
+            margin: 0;
+            padding: 0;
+            max-width: calc(500 / 16 * 1rem);
+            color: var(--bodyTextColorWhite);
         }
     }
 }
 
 /* Tablet - 768px */
-@media only screen and (min-width: 48em) {
-    #hero {
+@media only screen and (min-width: 48rem) {
+    #hero-227 {
         /* 32px - 40px */
-        padding: 0 clamp(2em, 5vw, 2.5em);
+        padding: 0 clamp(2rem, 5vw, 2.5rem);
 
-        #waves-bg {
-            /* Background Image */
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            overflow: hidden;
-            line-height: 0;
-            display: block;
+        .cs-container {
+            padding-bottom: calc(64 / 16 * 1rem);
 
-            img {
-                width: 100%;
-                height: 100%;
-                /* Makes image act like a background-image */
-                object-fit: cover;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
         }
 
-        .cs-title {
-            width: 100%;
-            color: var(--primary);
-            line-height: clamp(0.875em, 3.5vw, 1.5em);
-            font-size: calc(16 / 16 * 3.75rem);
+        .cs-flex-group {
+            /* 44px - 88px */
+            margin-left: clamp(2.75rem, 5.9vw, 5.5rem);
         }
 
         .cs-button-solid {
-            margin-right: calc(20 / 16 * 1rem);
             margin-bottom: 0;
-            padding: 0rem 3rem;
         }
 
-        .cs-container {
-            flex-flow: row;
-            gap: calc(60 / 16 * 1rem);
+        .cs-card-group {
+            flex-direction: row;
+            position: relative;
+
         }
 
-        .cs-left {
-            width: clamp(35%, 43%, 47%)
+        .cs-item {
+            &:before {
+                width: 1px;
+                height: 100vh;
+                background: -moz-linear-gradient(
+                    top,
+                    rgba(250, 251, 252, 0) 0%,
+                    rgba(250, 251, 252, 0.5) 100%
+                ); /* FF3.6-15 */
+                background: -webkit-linear-gradient(
+                    top,
+                    rgba(250, 251, 252, 0) 0%,
+                    rgba(250, 251, 252, 0.5) 100%
+                ); /* Chrome10-25,Safari5.1-6 */
+                top: auto;
+                left: auto;
+                right: 0;
+                bottom: calc(-64 / 16 * 1rem);
+            }
+
+            &:nth-of-type(1) {
+                /* makes the first line under the buttons shorter */
+                &:before {
+                    height: calc(630 / 16 * 1rem);
+                }
+            }
+
+            &:last-of-type {
+                &:before,
+                &:after {
+                    display: none;
+                }
+            }
         }
 
-        .cs-right {
-            margin: 0;
-            height: clamp(30vh, 37vh, 40vh);
-            // height: 50vh;
-            width: auto;
+        .cs-link {
+            /* 44px - 64px top & bottom, 48px - 88px left & right */
+            padding: clamp(2.75rem, 5.9vw, 5.5rem) clamp(3rem, 5.9vw, 5.5rem);
         }
     }
 }
 
 /* Desktop Parallax Effect - 1300px */
-@media only screen and (min-width: 81.25em) {
-    #hero {
-        background-position: center;
+@media only screen and (min-width: 81.25rem) {
+    #hero-227 {
+        background: url("/assets/images/pexels-blitzboy-1144176.jpg");
         background-size: cover;
+        background-position: center;
         background-repeat: no-repeat;
         /* creates parallax effect on background image */
         background-attachment: fixed;
-    }
-}
-
-/* Dark Mode */
-@media only screen and (min-width: 0em) {
-    body.dark-mode {
-        #hero {
-            .cs-background {
-                &:before {
-                    opacity: 0.8;
-                }
+        /* remove img tag so we can make parallax work */
+        .cs-picture {
+            img {
+                display: none;
             }
         }
     }
