--- a/src/assets/css/root.css
+++ b/src/assets/css/root.css
@@ -71,31 +71,12 @@
     line-height: 3.125em;
     font-weight: 400;
     color: #ffffff;
-    background-color: var(--primary);
+    background: linear-gradient(135deg, var(--primary), #78b7cf 70%);
+    border-radius: 30px;
     transition: color 0.3s;
     transition-delay: 0.1s;
     text-align: center;
     text-wrap: nowrap;
-  }
-  .cs-button-solid:hover {
-    color: black;
-  }
-  .cs-button-solid:hover:before {
-    width: 100%;
-  }
-  .cs-button-solid:before {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: "";
-    opacity: 1;
-    display: block;
-    background-color: #DAC0A3;
-    height: 100%;
-    width: 0;
-    transition: width 0.3s;
-    border-radius: 4px;
   }
   .company-name {
     color: var(--altPrimary);
@@ -225,58 +206,17 @@
   body.cs-open {
     overflow: hidden;
   }
-  .cs-remove {
-    display: none;
-  }
   #cs-navigation {
     z-index: 10000;
     position: fixed;
-    background-color: white;
+    background-color: #fff;
     width: 100%;
     /* prevents padding from affecting height and width */
     box-sizing: border-box;
     padding: 0.75rem 1rem;
     /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
-    font-family: "Barlow Condensed";
-    font-weight: bold;
+    font-family: "Roboto", "Arial", sans-serif;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    transition: background-color 0.9s ease-in-out, box-shadow 0.5s ease-in-out;
-  }
-  #cs-navigation.cs-active {
-    background-color: #FEFAF6;
-    box-shadow: none;
-    display: block;
-  }
-  #cs-navigation:before {
-    z-index: -11;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    /* black blurred overlay */
-    content: "";
-    opacity: 0;
-    display: block;
-    background: rgba(0, 0, 0, 0.6);
-    height: 100vh;
-    width: 0%;
-    transition: width 0.5s, opacity 0.3s;
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-  }
-  #cs-navigation.cs-active:before {
-    /* opacity: 1; */
-    width: 100%;
-    background-color: #BED1CF;
-  }
-  #cs-navigation.cs-active .cs-ul-wrapper {
-    opacity: 1;
-    transform: scaleX(1);
-    transition-delay: 0.2s;
-    visibility: visible;
-  }
-  #cs-navigation.cs-active .cs-li {
-    opacity: 1;
-    transform: translateX(0);
   }
   #cs-navigation .cs-container {
     display: flex;
@@ -333,9 +273,9 @@
   #cs-navigation .cs-box {
     position: relative;
     /* 14px - 16px */
-    height: clamp(1.4rem, 2.025vw, 1.525rem);
+    height: clamp(0.875rem, 1.5vw, 1rem);
     /* 24px - 28px */
-    width: clamp(2.25rem, 2.75vw, 2.5rem);
+    width: clamp(1.5rem, 2vw, 1.75rem);
   }
   #cs-navigation .cs-line {
     position: absolute;
@@ -345,7 +285,6 @@
     background-color: #1a1a1a;
     height: 2px;
     width: 100%;
-    background-color: var(--primary);
   }
   #cs-navigation .cs-line1 {
     top: 0;
@@ -355,7 +294,6 @@
     animation-direction: normal;
     animation-fill-mode: forwards;
     transform-origin: center;
-    background-color: var(--primary);
   }
   #cs-navigation .cs-line2 {
     top: 50%;
@@ -365,12 +303,10 @@
     animation-timing-function: ease;
     animation-direction: normal;
     animation-fill-mode: forwards;
-    background-color: var(--primary);
   }
   #cs-navigation .cs-line3 {
     bottom: 0;
     transition: bottom 0.3s, opacity 0.3s;
-    background-color: var(--primary);
   }
   #cs-navigation .cs-ul-wrapper {
     z-index: -1;
@@ -379,38 +315,37 @@
     left: auto;
     right: 0;
     opacity: 0;
-    /* transform: scaleX(0); */
-    background-color: #FEFAF6;
+    transform: scaleX(0);
+    background-color: #F8FCFF;
     height: 100vh;
-    width: 100vw;
     overflow: hidden;
-    transition: transform 0.4s, opacity 1s, visibility 1s;
-    /* box-shadow: inset rgba(0, 0, 0, 0.2) 0px 8px 24px; */
-    transform-origin: top;
-    visibility: hidden;
+    transition: transform 0.4s, opacity 0.3s;
+    box-shadow: inset rgba(0, 0, 0, 0.2) 0px 8px 24px;
+    transform-origin: top right;
   }
   #cs-navigation .cs-ul {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-items: flex-end;
     margin: 0;
     height: 65vh;
     min-width: 40%;
     width: auto;
-    /* overflow: scroll; */
+    overflow: scroll;
     /* 28px - 40px */
-    padding: clamp(1.25rem, 2.5vw, 2rem);
+    padding: 3rem clamp(1.75rem, 3vw, 2.5rem) 2rem 4.375rem;
     gap: 1.25rem;
   }
   #cs-navigation .cs-li {
     opacity: 0;
     /* transition from these values */
-    transform: translateX(-4rem);
+    transform: translateX(-2.5rem);
     margin-right: 0;
     width: 100%;
     list-style: none;
     transition: transform 0.6s, opacity 0.9s;
-    text-align: left;
+    text-align: right;
   }
   #cs-navigation .cs-li:nth-of-type(1) {
     transition-delay: 0.05s;
@@ -440,15 +375,15 @@
     transition-delay: 0.45s;
   }
   #cs-navigation .cs-li-link {
-    font-family: "Barlow Condensed";
     position: relative;
     display: inline-block;
     margin: 0;
     text-decoration: none;
     /* 16px - 24px */
-    font-size: clamp(3rem, 6vw, 4rem);
-    font-weight: bold;
+    font-size: clamp(2rem, 3.5vw, 2.5rem);
     line-height: 1.2em;
+    color: var(--headerColor);
+    font-family: "Barlow Condensed";
     color: var(--primary);
   }
   #cs-navigation .cs-li-link:before {
@@ -469,6 +404,96 @@
   #cs-navigation .cs-button-solid {
     display: none;
   }
+  #cs-navigation:before {
+    z-index: -11;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    /* black blurred overlay */
+    content: "";
+    opacity: 0;
+    display: block;
+    background: rgba(0, 0, 0, 0.6);
+    height: 100vh;
+    width: 0%;
+    transition: width 0.5s, opacity 0.3s;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+  }
+  #cs-navigation.cs-active .cs-ul-wrapper {
+    opacity: 1;
+    transform: scaleX(1);
+    transition-delay: 0.2s;
+  }
+  #cs-navigation.cs-active .cs-li {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  #cs-navigation.cs-active:before {
+    opacity: 1;
+    width: 100%;
+  }
+}
+/*-- -------------------------- -->
+<---     Navigation Dropdown    -->
+<--- -------------------------- -*/
+/* Mobile - 1023px */
+@media only screen and (max-width: 63.9375rem) {
+  #cs-navigation .cs-dropdown {
+    position: relative;
+    color: var(--bodyTextColorWhite);
+  }
+  #cs-navigation .cs-dropdown .cs-li-link {
+    position: relative;
+    transition: opacity 0.3s;
+  }
+  #cs-navigation .cs-dropdown.cs-active .cs-drop-ul {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+    margin: 0.75rem 0 0 0;
+    height: auto;
+    padding: 1.5rem;
+  }
+  #cs-navigation .cs-dropdown.cs-active .cs-drop-link {
+    opacity: 1;
+  }
+  #cs-navigation .cs-drop-icon {
+    position: absolute;
+    top: 50%;
+    right: -1.25rem;
+    transform: translateY(-50%);
+    height: auto;
+    width: 0.9375rem;
+  }
+  #cs-navigation .cs-drop-ul {
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    margin: 0;
+    background-color: var(--primary);
+    height: 0;
+    width: 100%;
+    box-sizing: border-box;
+    overflow: hidden;
+    padding: 0 1.5rem 0 1.5rem;
+    transition: padding 0.3s, margin 0.3s, height 0.3s, opacity 0.3s, transform 0.3s, visibility 0.3s;
+    gap: 0.75rem;
+    transform-origin: top right;
+  }
+  #cs-navigation .cs-drop-li {
+    list-style: none;
+    text-align: inherit;
+  }
+  #cs-navigation .cs-li-link.cs-drop-link {
+    /* 14px - 16px */
+    font-size: clamp(0.875rem, 2vw, 1.25rem);
+    color: #fff;
+  }
 }
 /*-- -------------------------- -->
 <---     Desktop Navigation     -->
@@ -477,24 +502,24 @@
 @media only screen and (min-width: 64rem) {
   #cs-navigation {
     z-index: 10000;
-    position: absolute;
-    background-color: none;
+    position: fixed;
+    background-color: #fff;
     width: 100%;
     /* prevents padding from affecting height and width */
     box-sizing: border-box;
     padding: 0 1rem;
     /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
-    font-family: "Barlow Condensed";
-    font-weight: normal;
+    font-family: "Roboto", "Arial", sans-serif;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   }
   #cs-navigation .cs-container {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     margin: auto;
-    max-width: 70rem;
+    max-width: 80rem;
     width: 100%;
-    gap: 10.5rem;
+    gap: 1.5rem;
   }
   #cs-navigation .cs-toggle {
     display: none;
@@ -505,10 +530,10 @@
     justify-content: center;
     align-items: center;
     /* margin-right auto pushes everything away from it to the right */
-    margin: 0 0 0 0;
-    height: 6.0625rem;
-    max-width: 24.875rem;
-    width: 20.4%;
+    margin: 0 auto 0 0;
+    height: 4.0625rem;
+    max-width: 21.875rem;
+    width: 18.4%;
     padding: 0;
   }
   #cs-navigation .cs-logo img {
@@ -525,7 +550,7 @@
     width: 100%;
     padding: 0;
     /* 20px - 36px */
-    gap: clamp(2.25rem, 3.6vw, 3.25rem);
+    gap: clamp(1.25rem, 2.6vw, 2.25rem);
   }
   #cs-navigation .cs-li {
     padding: 2rem 0;
@@ -539,16 +564,11 @@
     margin: 0;
     text-decoration: none;
     /* 14px - 16px */
-    font-size: clamp(1.1rem, 1.225vw, 1.225rem);
+    font-size: clamp(0.875rem, 1vw, 1rem);
     line-height: 1.5em;
-    color: white;
-    font-weight: 800;
-    font-family: "Roboto";
+    color: var(--bodyTextColor);
   }
   #cs-navigation .cs-li-link:hover:before {
-    width: 100%;
-  }
-  #cs-navigation .cs-li-link.cs-active:before {
     width: 100%;
   }
   #cs-navigation .cs-li-link:before {
@@ -559,10 +579,29 @@
     content: "";
     opacity: 1;
     display: block;
-    background: #DAC0A3;
+    background: var(--primary);
     height: 2px;
     width: 0%;
     transition: width 0.3s;
+  }
+  #cs-navigation .cs-li-link.cs-active:before {
+    width: 100%;
+  }
+}
+/* Dark Mode */
+@media only screen and (min-width: 64rem) {
+  body.dark-mode #cs-navigation {
+    background-color: var(--dark);
+  }
+  body.dark-mode #cs-navigation .cs-logo {
+    /* makes it turn white */
+    filter: grayscale(1) brightness(1000%);
+  }
+  body.dark-mode #cs-navigation .cs-li-link {
+    color: var(--bodyTextColorWhite);
+  }
+  body.dark-mode #cs-navigation .cs-li-link:before {
+    background-color: var(--primaryLight);
   }
 }
 /*-- -------------------------- -->
