--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -6,7 +6,7 @@
     <div class="cs-container">
         <!--Nav Logo-->
         <a href="/" class="cs-logo" aria-label="back to home">
-            <img src="/assets/svgs/logo-black.svg" alt="logo" width="80" height="50" aria-hidden="true" decoding="async">
+            <img src="/assets/svgs/logo-black.svg" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
         <nav class="cs-nav" role="navigation">
@@ -22,13 +22,48 @@
             <!-- This also allows for easy substitution of CodeStitch navigations. Just replace the .cs-ul-wrapper in the new navigation with this one -->
             <div class="cs-ul-wrapper">
                 <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
-                    <li class="cs-li"><a href="" class="cs-li-link">Home</a></li>
-                    <li class="cs-li"><a href="" class="cs-li-link">About</a></li>
-                    <li class="cs-li"><a href="" class="cs-li-link">Services</a></li>
-                    <li class="cs-li"><a href="" class="cs-li-link">Reviews</a></li>
-                    <li class="cs-li"><a href="" class="cs-li-link">Contact</a></li>
+                    {% set navPages = collections.all | eleventyNavigation %}
+                    {# Loop through all pages with a eleventyNavigation in the frontmatter #}
+                    {% for entry in navPages %}
+                        {# Define a hasChild variable to make it easier to test what links are dropdowns#}
+                        {% set hasChild = entry.children.length %}
+
+                        {# If this page is a dropdown, give it the appropriate classes, icons and accessibility attributes#}
+                        <li class="cs-li {% if hasChild %} cs-dropdown {% endif %}" {% if hasChild %} tabindex="0"{% endif %}>
+
+                            {# Similarly, if the link is active, apply the necessary classes #}
+                            {% if entry.url %}
+                                <a href="{{ entry.url }}" class="cs-li-link {% if entry.url == page.url %} cs-active {% endif %}">
+                                    {{ entry.key }}
+                                    {% if hasChild %}
+                                        <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
+                                    {% endif %}
+                                </a>
+
+                            {% else %}
+                                <span class="cs-li-link {% if entry.url == page.url %} cs-active {% endif %}">
+                                    {{ entry.key }}
+                                    {% if hasChild %}
+                                        <img class="cs-drop-icon" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons%2Fdown.svg" alt="dropdown icon" width="15" height="15" decoding="async" aria-hidden="true">
+                                    {% endif %}
+                                </span>
+                            {% endif %}
+
+                            {# Dropdowns have another ul/li set up within the parent li. Render in the same way as a normal link #}
+                            {% if hasChild %}
+                                <ul class="cs-drop-ul">
+                                    {% for child in entry.children %}
+                                        <li class="cs-drop-li">
+                                            <a href="{{ child.url }}" class="cs-li-link cs-drop-link">{{ child.key }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            {% endif %}
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
         </nav>
+        <a href="/contact" class="cs-button-solid cs-nav-button">Contact Us</a>
     </div>
 </header>
