--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -56,16 +56,21 @@
     content: "";
     position: absolute;
     height: 100%;
-    width: 0%;
-    background: #000;
-    opacity: 1;
+    width: 100%;
+    background: white;
+    opacity: 0;
     top: 0;
     left: 0;
     z-index: -1;
-    transition: width 0.3s;
+    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
+    border-radius: 30px;
+    border: 2px solid var(--primary);
+  }
+  #RTsbs-1594 .cs-button-solid:hover, #RTsbsr-1594 .cs-button-solid:hover, #RTsbst-1594 .cs-button-solid:hover {
+    color: var(--primary);
   }
   #RTsbs-1594 .cs-button-solid:hover:before, #RTsbsr-1594 .cs-button-solid:hover:before, #RTsbst-1594 .cs-button-solid:hover:before {
-    width: 100%;
+    opacity: 1;
   }
   #RTsbs-1594 .cs-image-group, #RTsbsr-1594 .cs-image-group, #RTsbst-1594 .cs-image-group {
     /* scales the whole group based on the view width size and stop when that vales equals .745em, resets at desktop */
@@ -140,27 +145,142 @@
   }
 }
 /*-- -------------------------- -->
-<---   Side By Side Reverse     -->
+<---           Steps            -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #RTsbsr-1594 {
-    background-color: #F8FCFF;
+  #steps-1173 {
+    padding: var(--sectionPadding);
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
   }
-  #RTsbsr-1594 .cs-picture1 {
-    left: auto;
-    right: 0;
+  #steps-1173 .cs-container {
+    width: 100%;
+    /* changes to 1280px at tablet */
+    max-width: 44rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* 48px - 64px */
+    gap: clamp(3rem, 6vw, 4rem);
   }
-  #RTsbsr-1594 .cs-picture2 {
-    right: auto;
-    left: 0;
+  #steps-1173 .cs-content {
+    /* set text align to left if content needs to be left aligned */
+    text-align: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /* centers content horizontally, set to flex-start to left align */
+    align-items: center;
+  }
+  #steps-1173 .cs-text {
+    font-size: var(--bodyFontSize);
+    line-height: 1.5em;
+    text-align: inherit;
+    width: 100%;
+    max-width: 40.625rem;
+    margin: 0;
+    color: var(--bodyTextColor);
+  }
+  #steps-1173 .cs-card-group {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 1.25rem;
+  }
+  #steps-1173 .cs-item {
+    text-align: center;
+    list-style: none;
+    display: flex;
+    grid-column: span 12;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+  }
+  #steps-1173 .cs-item:last-of-type:after {
+    display: none;
+  }
+  #steps-1173 .cs-item:nth-of-type(even):after {
+    /* scaleX -1 flips it horizontally */
+    transform: rotate(-135deg) scaleX(-1);
+  }
+  #steps-1173 .cs-item:after {
+    content: "";
+    position: relative;
+    display: block;
+    /* 54px - 84px */
+    width: clamp(3.375rem, 6vw, 5.25rem);
+    height: clamp(3.375rem, 6vw, 5.25rem);
+    margin-top: 1.25rem;
+    background: url("https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/curved-arrow-light.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 1;
+    transform: rotate(135deg);
+  }
+  #steps-1173 .cs-picture {
+    margin-bottom: 1.5rem;
+    width: 5.5rem;
+    height: 5.5rem;
+    border: 1px solid #858585;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #steps-1173 .cs-icon {
+    width: 2.5rem;
+    height: auto;
+    display: block;
+  }
+  #steps-1173 .cs-h3 {
+    font-size: 1.25rem;
+    line-height: 1.2em;
+    text-align: inherit;
+    margin: 0 0 0.75rem 0;
+    color: var(--headerColor);
+  }
+  #steps-1173 .cs-item-text {
+    font-size: 1rem;
+    line-height: 1.5em;
+    text-align: inherit;
+    max-width: 25.8125rem;
+    margin: 0;
+    color: var(--bodyTextColor);
+  }
+  #steps-1173 .cs-graphic {
+    width: 52.5rem;
+    height: auto;
+    opacity: 0.3;
+    position: absolute;
+    top: -5rem;
+    left: -5rem;
+    z-index: -1;
+    transform: rotate(-10deg);
   }
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #RTsbsr-1594 .cs-image-group {
-    /* sends it to the right in the 2nd position */
-    order: 2;
+  #steps-1173 .cs-container {
+    max-width: 80rem;
+  }
+  #steps-1173 .cs-item {
+    grid-column: span 4;
+  }
+  #steps-1173 .cs-item:nth-of-type(1):after {
+    transform: rotate(135deg) scaleX(-1);
+  }
+  #steps-1173 .cs-item:after {
+    margin: 0;
+    position: absolute;
+    right: -2.5rem;
+    top: 0;
+    transform: rotate(45deg);
   }
 }
 /*-- -------------------------- -->
@@ -358,17 +478,21 @@
     content: "";
     position: absolute;
     height: 100%;
-    width: 0%;
-    background: #000;
-    opacity: 1;
+    width: 100%;
+    background: white;
+    opacity: 0;
     top: 0;
     left: 0;
     z-index: -1;
-    border-radius: 0.25rem;
-    transition: width 0.3s;
+    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
+    border-radius: 30px;
+    border: 2px solid var(--primary);
+  }
+  #why-choose-892 .cs-button-solid:hover {
+    color: var(--primary);
   }
   #why-choose-892 .cs-button-solid:hover:before {
-    width: 100%;
+    opacity: 1;
   }
   #why-choose-892 .cs-card-group {
     width: 100%;
@@ -534,12 +658,13 @@
     color: var(--bodyTextColorWhite);
   }
   #pricing-357 .cs-popular .cs-button-solid {
-    background-color: #fff;
+    background: #fff;
     color: var(--primary);
     transition: color 0.3s;
   }
   #pricing-357 .cs-popular .cs-button-solid:before {
-    background-color: var(--secondary);
+    background-color: black;
+    border: none;
   }
   #pricing-357 .cs-popular .cs-button-solid:hover {
     color: #fff;
@@ -588,10 +713,14 @@
     /* spans are inline, need to add block for margin to work */
     display: block;
   }
+  #pricing-357 #price-1 {
+    margin-bottom: 0;
+  }
   #pricing-357 .cs-small {
     font-size: 0.875rem;
     font-weight: 400;
     color: #4e4b66;
+    margin-left: 10px;
   }
   #pricing-357 .cs-included {
     font-size: 1rem;
@@ -656,17 +785,21 @@
     content: "";
     position: absolute;
     height: 100%;
-    width: 0%;
-    background: #000;
-    opacity: 1;
+    width: 100%;
+    background: white;
+    opacity: 0;
     top: 0;
     left: 0;
     z-index: -1;
-    border-radius: 0.25rem;
-    transition: width 0.3s;
+    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
+    border-radius: 30px;
+    border: 2px solid var(--primary);
+  }
+  #pricing-357 .cs-button-solid:hover {
+    color: var(--primary);
   }
   #pricing-357 .cs-button-solid:hover:before {
-    width: 100%;
+    opacity: 1;
   }
   #pricing-357 .cs-button-solid {
     /* cs-button-solid override */
@@ -700,19 +833,20 @@
   }
 }
 /*-- -------------------------- -->
-<---          Gallery           -->
+<---         Gallery            -->
 <--- -------------------------- -*/
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
-  #gallery-43 {
+  #gallery-1716 {
     padding: var(--sectionPadding);
     position: relative;
-    /* Prevents overflow from the image going off screen */
+    z-index: 1;
     overflow: hidden;
+    background-color: #F8FCFF;
   }
-  #gallery-43 .cs-container {
+  #gallery-1716 .cs-container {
     width: 100%;
-    max-width: 69rem;
+    max-width: 80rem;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -720,152 +854,127 @@
     /* 48px - 64px */
     gap: clamp(3rem, 6vw, 4rem);
   }
-  #gallery-43 .cs-content {
+  #gallery-1716 .cs-content {
     /* set text align to left if content needs to be left aligned */
-    text-align: center;
+    text-align: left;
     width: 100%;
     display: flex;
     flex-direction: column;
     /* centers content horizontally, set to flex-start to left align */
-    align-items: center;
+    align-items: flex-start;
   }
-  #gallery-43 .cs-image-group {
+  #gallery-1716 .cs-text {
+    margin-bottom: 1rem;
+  }
+  #gallery-1716 .cs-text:last-of-type {
+    /* 32px - 64px */
+    margin-bottom: clamp(2rem, 7vw, 4rem);
+  }
+  #gallery-1716 .cs-text:last-of-type:before {
+    /* colored overlay rectangle - positioned absolute to the section tag because it is the nearest parent with a decalred position relative */
+    content: "";
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* 16px - 20px */
-    gap: clamp(1rem, 1.5vw, 1.25rem);
-  }
-  #gallery-43 .cs-item {
-    width: 100%;
-    height: 100%;
-    aspect-ratio: 1;
-    margin: 0;
-    position: relative;
-    display: block;
-  }
-  #gallery-43 .cs-item:hover .cs-hover-box {
-    opacity: 1;
-  }
-  #gallery-43 .cs-item:hover .cs-icon {
-    /* return to original position */
-    transform: rotateY(0);
-  }
-  #gallery-43 .cs-item:hover .cs-h3 {
-    opacity: 1;
-    /* Return to original position */
-    transform: translateY(0);
-  }
-  #gallery-43 .cs-item:hover .cs-hover-box-text {
-    opacity: 1;
-    /* Return to original position */
-    transform: translateY(0);
-  }
-  #gallery-43 .cs-picture {
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: relative;
-  }
-  #gallery-43 .cs-picture img {
+    height: 80%;
+    background: #F8FCFF;
+    opacity: 0.1;
     position: absolute;
-    top: 0;
+    display: block;
+    bottom: 0;
     left: 0;
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+    z-index: -1;
   }
-  #gallery-43 .cs-hover-box {
+  #gallery-1716 .cs-button-solid {
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 400;
     text-align: center;
-    width: 100%;
-    height: 100%;
-    padding: 1rem;
-    background-color: #4D869C;
-    opacity: 0;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* Prevents padding from contributing to height & width */
+    margin: 0;
+    color: #fff;
+    min-width: 9.375rem;
+    padding: 0 1.5rem;
+    background-color: var(--primary);
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    /* prevents padding from adding to the width */
     box-sizing: border-box;
-    /* Sets stage for 3d transform animation */
-    perspective: 700px;
+  }
+  #gallery-1716 .cs-button-solid:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 0%;
+    background: #000;
+    opacity: 1;
     top: 0;
     left: 0;
-    z-index: 10;
-    /* prevents mouse from being able to interact with these elements */
-    pointer-events: none;
-    transition: opacity 0.3s;
+    z-index: -1;
+    transition: width 0.3s;
   }
-  #gallery-43 .cs-icon {
-    /* 50px - 60px */
-    width: clamp(3.125rem, 5vw, 3.75rem);
-    height: clamp(3.125rem, 5vw, 3.75rem);
-    /* 16px - 32px */
-    margin-bottom: clamp(1rem, 5vw, 2rem);
-    border-radius: 50%;
-    background-color: #fff;
-    outline: 0.5rem solid fade(#fff, 70%);
-    /* Start with the icon box rotated 90deg */
-    transform: rotateY(90deg);
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    flex: none;
-    transition: transform 0.5s;
+  #gallery-1716 .cs-button-solid:hover:before {
+    width: 100%;
   }
-  #gallery-43 .cs-icon img {
-    width: 1.25rem;
-    height: 1.25rem;
-  }
-  #gallery-43 .cs-h3 {
-    /* 20px - 25px */
-    font-size: clamp(1.25rem, 2vw, 1.5625rem);
-    line-height: 1.2em;
-    font-weight: 700;
-    margin: 0 auto;
-    max-width: 16.875rem;
-    color: #fff;
-    /* make starting position down 10px and invisible */
-    opacity: 0;
-    transform: translateY(0.625rem);
-    margin-bottom: 0.5rem;
-    transition: opacity 0.3s, transform 0.3s ease-out;
-    transition-delay: 0.1s;
-  }
-  #gallery-43 .cs-hover-box-text {
-    /* 13px - 16px */
-    font-size: clamp(0.8125rem, 1vw, 1rem);
-    line-height: 1.5em;
-    margin: 0 auto;
-    max-width: 16.875rem;
-    color: #fff;
-    /* make starting position down 10px and invisible */
-    opacity: 0;
-    transform: translateY(0.625rem);
-    transition: opacity 0.3s, transform 0.3s ease-out;
-    transition-delay: 0.2s;
-  }
-}
-/* In Between - 600px */
-@media only screen and (min-width: 37.5rem) {
-  #gallery-43 .cs-image-group {
+  #gallery-1716 .cs-gallery {
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr;
+    grid-template-columns: repeat(1, 1fr);
+    /* sends it to the top in the 1st position */
+    order: -1;
   }
-  #gallery-43 .cs-item {
-    grid-column: span 6;
+  #gallery-1716 .cs-picture {
+    width: 100%;
+    /* changes at tablet */
+    height: 40vw;
+    max-height: 25rem;
+    display: block;
+    position: relative;
+    z-index: 1;
+    grid-column: span 4;
+  }
+  #gallery-1716 .cs-picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
   }
 }
 /* Tablet - 768px */
 @media only screen and (min-width: 48rem) {
-  #gallery-43 .cs-item {
-    grid-column: span 4;
+  #gallery-1716 .cs-container {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+  #gallery-1716 .cs-content {
+    max-width: 19rem;
+    /* 32px - 64px, ensures theres always a gap at the bottom to space out the content from the bottom of the container and let the colored rectangle shape be a little bigger and take up more space */
+    padding-bottom: clamp(2rem, 7vw, 4rem);
+  }
+  #gallery-1716 .cs-text:last-of-type {
+    /* add position relative so the colored rectangle is now absolutely positioned to the cs-text parent. We also only want these styles on the last paragraph tag */
+    position: relative;
+    z-index: 1;
+  }
+  #gallery-1716 .cs-text:last-of-type:before {
+    width: 250vw;
+    height: 100vw;
+    top: calc(100% + 1.8rem);
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  #gallery-1716 .cs-gallery {
+    height: auto;
+  }
+  #gallery-1716 .cs-picture {
+    height: 100vw;
+    width: 100%;
+    /* 280px - 420px */
+    min-height: clamp(17.5rem, 37vw, 26.25rem);
   }
 }
 /*-- -------------------------- -->
@@ -915,6 +1024,19 @@
     /* centers content horizontally, set to flex-start to left align */
     align-items: flex-start;
   }
+  #reviews-278 .cs-content .cs-button-solid {
+    background: #fff;
+    color: var(--primary);
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  }
+  #reviews-278 .cs-content .cs-button-solid:before {
+    background-color: black;
+    border: none;
+  }
+  #reviews-278 .cs-content .cs-button-solid:hover {
+    color: #fff;
+    background-color: black;
+  }
   #reviews-278 .cs-title,
   #reviews-278 .cs-topper {
     color: var(--bodyTextColorWhite);
@@ -925,29 +1047,6 @@
   }
   #reviews-278 .cs-text:last-of-type {
     margin-bottom: 2rem;
-  }
-  #reviews-278 .cs-button-solid {
-    font-size: 1rem;
-    /* 46px - 56px */
-    line-height: clamp(2.875rem, 5.5vw, 3.5rem);
-    text-decoration: none;
-    font-weight: 400;
-    text-align: center;
-    margin: 0;
-    color: #fff;
-    min-width: 9.375rem;
-    padding: 0 1.5rem;
-    background-color: var(--primary);
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-    /* prevents padding from adding to the width */
-    box-sizing: border-box;
-  }
-  #reviews-278 .cs-button-solid {
-    /* button styles override */
-    background-color: #fff;
-    color: var(--primary);
   }
   #reviews-278 .cs-review {
     /* padding left & right 32px - 80px */
