--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -134,18 +134,27 @@
             z-index: 1;
 
             &:before {
-                content: "";
-                position: absolute;
-                display: block;
-                height: 100%;
-                width: 0%;
-                background: #000;
-                opacity: 1;
-                top: 0;
-                left: 0;
-                z-index: -1;
-                transition: width 0.3s;
-            }
+              content: '';
+              position: absolute;
+              height: 100%;
+              width: 100%;
+              background: white;
+              opacity: 0;
+              top: 0;
+              left: 0;
+              z-index: -1;
+              transition: opacity .3s ease-in-out, color 0.3s ease-in-out;
+              border-radius: 30px;
+              border: 2px solid var(--primary);
+          }
+
+          &:hover {
+            color: var(--primary);
+
+              &:before {
+                  opacity: 1;
+              }
+          }
         }
 
         .cs-button-transparent {
@@ -212,8 +221,6 @@
             list-style: none;
             position: relative;
             box-sizing: border-box;
-
-            
         }
 
         .cs-link {
