--- a/src/_includes/components/header.html
+++ b/src/_includes/components/header.html
@@ -64,6 +64,6 @@
                 </ul>
             </div>
         </nav>
-        <a href="/contact" class="cs-button-solid cs-nav-button">Contact Us</a>
+        <a href="/contact" class="cs-button-solid cs-nav-button">Get In Touch</a>
     </div>
 </header>
