--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -10,9 +10,9 @@
             With Us Today
         </h2>
         <p>
-            Say something catchy, informative, and encouraging to click the button to go to the contact page. I like to add these to the bottom of all pages.
+            Get the exposure your business deserves today! Discover the possibilities that await with Dual Stream Web Designs, and take control of your online presence.
         </p>
-        <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
+        <a href="/contact" class="cs-button-solid">Contact Us</a>
     </div>
     <picture>
         <source media="(max-width: 600px)" srcset="/assets/images/cta-bg.png">
