--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -273,9 +273,13 @@
     grid-column: span 4;
   }
   #steps-1173 .cs-item:nth-of-type(1):after {
+    margin: 0;
+    position: absolute;
+    right: -2.5rem;
+    top: 0;
     transform: rotate(135deg) scaleX(-1);
   }
-  #steps-1173 .cs-item:after {
+  #steps-1173 .cs-item:nth-of-type(2):after {
     margin: 0;
     position: absolute;
     right: -2.5rem;
@@ -454,7 +458,7 @@
     align-items: center;
   }
   #why-choose-892 .cs-text {
-    max-width: 62.5rem;
+    max-width: 50rem;
   }
   #why-choose-892 .cs-button-solid {
     font-size: 1rem;
@@ -543,13 +547,13 @@
     transition: color 0.3s;
   }
   #why-choose-892 .cs-floater {
-    width: 21.9375rem;
+    width: 9.4375rem;
     height: auto;
     display: none;
     position: absolute;
-    top: -13.75rem;
-    right: -3.75rem;
-    transform: rotate(-66deg);
+    top: -7.5rem;
+    right: 3.75rem;
+    transform: rotate(46deg);
   }
 }
 /* Tablet - 768px */
@@ -905,16 +909,21 @@
     content: "";
     position: absolute;
     height: 100%;
-    width: 0%;
-    background: #000;
-    opacity: 1;
+    width: 100%;
+    background: white;
+    opacity: 0;
     top: 0;
     left: 0;
     z-index: -1;
-    transition: width 0.3s;
+    transition: opacity 0.3s ease-in-out, color 0.3s ease-in-out;
+    border-radius: 30px;
+    border: 2px solid var(--primary);
+  }
+  #gallery-1716 .cs-button-solid:hover {
+    color: var(--primary);
   }
   #gallery-1716 .cs-button-solid:hover:before {
-    width: 100%;
+    opacity: 1;
   }
   #gallery-1716 .cs-gallery {
     width: 100%;
